--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: main
                 <p class="description">{{ featured.subtitle }}</p>
                 <div class="buttons">
                     <a href="{{ featured.custom_url }}" role="button" class="button">
-                        <img src="/assets/img/icons/play-button.svg">
+                        <img src="https://ismaelalt.github.io/jekflix-template/assets/img/icons/play-button.svg">
                         <span>Écouter</span>
                     </a>
                 </div>
